# grpc

./: BUILD  WORKSPACE
bazel/: cc_grpc_library.bzl  cython_library.bzl  generate_cc.bzl  grpc_build_system.bzl  grpc_deps.bzl
src/python/grpcio/grpc/: BUILD.bazel
src/python/grpcio/grpc/experimental/: BUILD.bazel
src/python/grpcio/grpc/framework/common/: BUILD.bazel
src/python/grpcio/grpc/framework/foundation/: BUILD.bazel
src/python/grpcio/grpc/framework/interfaces/base/: BUILD.bazel
src/python/grpcio/grpc/framework/interfaces/face/: BUILD.bazel
test/cpp/util/: BUILD
