package(default_visibility = ["//visibility:public"])

py_library(
    name = "common",
    srcs = ["__init__.py",],
    deps = [
        ":cardinality",
        ":style",
    ],
)

py_library(
    name = "cardinality",
    srcs = ["cardinality.py"],
)

py_library(
    name = "style",
    srcs = ["style.py"],
)
