package(default_visibility = ["//visibility:public"])

py_library(
    name = "base_lib",
    srcs = ["__init__.py",],
    deps = [
        ":base",
        ":utilities",
    ],
)

py_library(
    name = "base",
    srcs = ["base.py"],
    deps = ["//src/python/grpcio/grpc/framework/foundation:abandonment"],
)

py_library(
    name = "utilities",
    srcs = ["utilities.py"],
)
